--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,28 +1,27 @@
 <% include partials/header %>
 
-    <div class="container">
-        <div class="jumbotron">
-            <div class="container">
-                <h1 class="display-4">
-                    <strong>Welcome to YelpCamp app !</strong>
-                </h1>
-                <p class="lead">view our best
-                    <strong>hand-picked campgrounds</strong> from all over the world</p>
-                <p>
-                    <a class="btn btn-primary" href="campgrounds/new">Add a new CampGround</a>
-                </p>
-            </div>
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">
+                <strong>Welcome to YelpCamp app !</strong>
+            </h1>
+            <p class="lead">view our best
+                <strong>hand-picked campgrounds</strong> from all over the world</p>
+            <p>
+                <a class="btn btn-primary" href="campgrounds/new">Add a new CampGround</a>
+            </p>
         </div>
+    </div>
 
+    <div class="container">
 
-        <!-- Error  fix tommorow -->
         <div class="row text-center" style="display: flex; flex-wrap: wrap">
             <% campgrounds.forEach(function(data) { %>
-                <div class="col-lg-3 col-md-6" style="height: 300px; width: 400px">
+                <div class="col-lg-3 col-md-6 mt-4">
                     <div class="img-thumbnail">
-                        <img src="<%= data.image%>" alt=" <%= data.name + " image " %> ">
+                        <img class="mx-auto" style="height: 100%; width: 100%;" src="<%= data.image%>" alt=" <%= data.name + " image " %> ">
                         <div class="caption">
-                            <h4>
+                            <h4 style="font-size: 1.3rem; margin: 2%;">
                                 <%= data.name %>
                             </h4>
                         </div>
@@ -30,7 +29,6 @@
                 </div>
                 <%})%>
         </div>
-
     </div>
 
-    <% include partials/fotter %>
+<% include partials/fotter %>
