--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,13 +1,26 @@
 <% include partials/header %>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg" style="margin-top: 45px">
+                <h1 style="text-align: center">Create a new CampGround</h1>
+                <div class="" style="width: 30%; margin: 25px auto;">
+                    <form action="/campgrounds" method="POST">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="name" placeholder="name">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="image" placeholder="image URL">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-primary btn-block">Submit</button>
+                        </div>
 
-<h1>Add new CampGround</h1>
+                    </form>
 
-<form action="/campgrounds" method="POST">
-    <input type="text" name="name" placeholder="name">
-    <input type="text" name="image" placeholder="image URL">
-    <button>Submit</button>
-</form>
+                    <a href="/campgrounds">Go Back</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<a href="/campgrounds">Back to CampGround</a>
-
-<% include partials/fotter %>
+    <% include partials/fotter %>
