adding description into database and creating new show.ejs and

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -24,6 +24,7 @@
                             <h4 style="font-size: 1.3rem; margin: 2%;">
                                 <%= data.name %>
                             </h4>
+                            <a href="/campgrounds/<%= data._id%>" class="btn btn-primary">More Info</a>
                         </div>
                     </div>
                 </div>
