--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,6 +12,9 @@
                             <input class="form-control" type="text" name="image" placeholder="image URL">
                         </div>
                         <div class="form-group">
+                            <input class="form-control" type="text" name="description" placeholder="description">
+                        </div>
+                        <div class="form-group">
                             <button class="btn btn-primary btn-block">Submit</button>
                         </div>
 
